--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,14 @@
 }
 
 .info {
-  padding: 3rem 0rem;
+  padding: 2rem 0rem;
 }
 
 .banner {
   padding: 2rem 0rem;
   background-color: #92141c;
+}
+
+.content {
+  padding: 2rem 0rem;
 }
